# forgeit

./: .env.template  .gitignore  CMakeLists.txt  README.md  build.sh  config.template.json  main.cpp
docs/: main_cpp.README.md
include/: config.hpp
src/: config.cpp  main.cpp  utils.cpp
src/client/: client.cpp
src/daemon/: daemon.cpp  socket.cpp  utils.cpp
